Added DpINtoKA entry

--- a/index.html
+++ b/index.html
@@ -421,6 +421,26 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 
 
 <li>
+Iftach Haitner and Noam Mazorand Jad Silbak  and Eliad Tsfadia</a>. <br>
+<strong>On the Complexity of Two-Party Differential Privacyn</strong><br>
+<span class=abslide>[abstract]</span> <br>
+Manuscript 2021<br>
+Draft of full version  <a  href="https://arxiv.org/abs/2108.07664">[arxiv]</a><br><br>
+
+<div class="box">
+<p>
+In distributed differential privacy, the parties perform analysis over their joint data while preserving the privacy for both datasets. Interestingly, for a few fundamental two-party functions such as inner product and Hamming distance, the accuracy of the distributed solution lags way behind what is achievable in the client-server setting. <span class=blu1> McGregor, Mironov, Pitassi, Reingold, Talwar, and Vadhan [FOCS '10]</span> proved that this gap is inherent, showing upper bounds on the accuracy of (any) distributed solution for these functions. These limitations can be bypassed when settling for computational differential privacy, where the data is differentially private only in the eyes of a computationally bounded observer, using public-key cryptography primitives.<br><br>
+
+We prove that the use of public-key cryptography is necessary for bypassing the limitation of <span class=blu1>McGregor et al.</span>, showing that a non-trivial solution for the inner-product, or the Hamming distance, implies the existence of a key-agreement protocol. Our bound implies a combinatorial proof for the fact that non-Boolean inner product of independent (strong) Santha-Vazirani sources is a good condenser. We obtain our main result by showing that the inner-product of a (single, strong) SV source with a uniformly random seed is a good condenser, even when the seed and source are dependent.
+</p>
+</div>
+</li>
+
+
+
+
+
+<li>
 Dror Chawin and Iftach Haitner and Noam Mazor. <br>
 <strong>Lower Bounds on the Time/Memory Tradeoff of Function Inversion</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
