<# Enter your message here. #>

--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 
 
 <li>
-Iftach Haitner and Noam Mazorand Jad Silbak  and Eliad Tsfadia</a>. <br>
-<strong>On the Complexity of Two-Party Differential Privacyn</strong><br>
+Iftach Haitner and Noam Mazor and Jad Silbak and Eliad Tsfadia <br>
+<strong>On the Complexity of Two-Party Differential Privacy</strong><br>
 <span class=abslide>[abstract]</span> <br>
 Manuscript 2021<br>
 Draft of full version  <a  href="https://arxiv.org/abs/2108.07664">[arxiv]</a><br><br>
@@ -441,7 +441,7 @@ We prove that the use of public-key cryptography is necessary for bypassing the 
 
 
 <li>
-Dror Chawin and Iftach Haitner and Noam Mazor. <br>
+Dror Chawin and Iftach Haitner and Noam Mazor <br>
 <strong>Lower Bounds on the Time/Memory Tradeoff of Function Inversion</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 TCC 2020<br>
@@ -502,7 +502,7 @@ Soon...
 </li>
 
 
-<li>Iftach Haitner and Yonatan Karidi-Heller. <br>
+<li>Iftach Haitner and Yonatan Karidi-Heller <br>
 <strong>A Tight Lower Bound on Adaptively Secure Full-Information Coin Flip</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2020<br>
