--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Complexity.<br></p>
 <b>Students</b><br>
 <ul>
 
-<li> Eliad Tsfadia (PhD)</li>
+<li>   <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia (PhD)</a></li>
 <li> Noam Mazor (PhD)</li>
 <li> Jad Silbak (PhD) </li>
 <li> Dror Chawin (MSc)</li>
@@ -421,7 +421,7 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 
 
 <li>
-Iftach Haitner and Noam Mazor and Jad Silbak and Eliad Tsfadia <br>
+Iftach Haitner and Noam Mazor and Jad Silbak and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
 <strong>On the Complexity of Two-Party Differential Privacy</strong><br>
 <span class=abslide>[abstract]</span> <br>
 Manuscript 2021<br>
@@ -545,7 +545,7 @@ of statistically hiding commitment schemes from arbitrary one-way functions.
 
 
 <li>
-<a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> and Iftach Haitner and Eliad Tsfadia. <br>
+<a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> and Iftach Haitner and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
 <strong>A Tight Parallel Repetition Theorem for Partially Simulatable Interactive Arguments via Smooth KL-Divergence</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 Crypto 2020<br>
@@ -900,7 +900,7 @@ This tutorial discusses  two rather recent computational notions  of entropy, bo
 </li>
 
 <li>
-<a href="http://www.tau.ac.il/~nivb/">Niv Buchbinder</a>  and Iftach Haitner and Nissan Levi and Eliad Tsfadia <br>
+<a href="http://www.tau.ac.il/~nivb/">Niv Buchbinder</a>  and Iftach Haitner and Nissan Levi and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
 <strong>Fair Coin Flipping: Tighter Analysis and the Many-Party Case</strong> <br>
 <span class=abslide>[abstract]</span>  <!-- <a href="papers/3PartyCF/ManyPartySeminar.ppsx">[slides]</a> --> <br>
 SODA 2017 <br>
@@ -1042,7 +1042,7 @@ Haitner and Omri, our result holds also for <em>weak</em> coin-flipping protocol
 </li>
 
 <li>
-Iftach Haitner and Eliad Tsfadia <br>
+Iftach Haitner and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
 <strong>An Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong><br>
 <span class=abslide>[abstract]</span> <a href="papers/3PartyCF/3Party-full.ppsx">[slides]</a> <br>
 STOC 2014 <a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">[pdf]</a><br>
