--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Complexity.<br></p>
 Tel Aviv university, Check Point Building, Office 444 (forth floor)<br>
 Phone:+972-3-6407996<br>
 Fax: +972-3-6409373<br>
-Email: iftachh [at] tau.ac.il<br>
+Email: iftachh [at] tauex.tau.ac.il<br>
 Mail: Iftach Haitner, Tel Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69978, Israel <br>
  </div>
 
