--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 
 
 <li>
-Iftach Haitner and Noam Mazor and Jad Silbak and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
-<strong>On the Complexity of Two-Party Differential Privacy</strong><br>
+Iftach Haitner and Nikolaos Makriyannis and Samuel Ranellucci  and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
+<strong>On the Complexity of Two-Party Differential Privacy</strong> <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 Manuscript 2021<br>
 Draft of full version  <a  href="https://arxiv.org/abs/2108.07664">[arxiv]</a><br><br>
@@ -436,13 +436,30 @@ We prove that the use of public-key cryptography is necessary for bypassing the 
 </div>
 </li>
 
+<li>
+Iftach Haitner and Noam Mazor and Jad Silbak and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
+<strong>Highly Efficient OT-Based Multiplication Protocols</strong> <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+Manuscript 2021<br>
+Draft of full version  <a  href="https://eprint.iacr.org/2021/1373">[ePrint]</a><br><br>
+
+<div class="box">
+<p>
+We present a new OT-based two-party multiplication protocol that is almost as efficient as Gilboa's semi-honest protocol (Crypto '99), but has a high-level of security against malicious adversaries without further compilation. The achieved security suffices for many applications, and, assuming DDH, can be cheaply compiled into full security.
+</p>
+</div>
+</li>
+
+
+
+
 
 
 
 
 <li>
 Dror Chawin and Iftach Haitner and Noam Mazor <br>
-<strong>Lower Bounds on the Time/Memory Tradeoff of Function Inversion</strong>  <img src="new.png" class=update1><br>
+<strong>Lower Bounds on the Time/Memory Tradeoff of Function Inversion</strong>  <br>
 <span class=abslide>[abstract]</span> <br>
 TCC 2020<br>
 Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2020/089/">[eccc]</a><br><br>
@@ -487,7 +504,7 @@ We make progress on the above intriguing  question, both for the adaptive and th
 
 <li>
 <a href="https://www.cs.bgu.ac.il/~beimel/">Amos Beimel </a> and Iftach Haitner and <a href="http://people.cs.georgetown.edu/~kobbi/">Kobbi Nissim</a> and  <a href="https://www.uri.co.il/">Uri Stemmer</a> <br>
-<strong>On the Round Complexity of the Shuffle Model</strong>  <img src="new.png" class=update1><br>
+<strong>On the Round Complexity of the Shuffle Model</strong>  <br>
 <!-- <span class=abslide>[abstract]</span> <br> --!>
 TCC 2020<br> 
 
@@ -503,7 +520,7 @@ Soon...
 
 
 <li>Iftach Haitner and Yonatan Karidi-Heller <br>
-<strong>A Tight Lower Bound on Adaptively Secure Full-Information Coin Flip</strong>  <img src="new.png" class=update1><br>
+<strong>A Tight Lower Bound on Adaptively Secure Full-Information Coin Flip</strong> <br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2020<br>
 Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2020/071/">[eccc]</a><br><br>
@@ -546,7 +563,7 @@ of statistically hiding commitment schemes from arbitrary one-way functions.
 
 <li>
 <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> and Iftach Haitner and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
-<strong>A Tight Parallel Repetition Theorem for Partially Simulatable Interactive Arguments via Smooth KL-Divergence</strong>  <img src="new.png" class=update1><br>
+<strong>A Tight Parallel Repetition Theorem for Partially Simulatable Interactive Arguments via Smooth KL-Divergence</strong> <br>
 <span class=abslide>[abstract]</span> <br>
 Crypto 2020<br>
 Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2019/049/">[eccc]</a><br><br>
