--- a/index.html
+++ b/index.html
@@ -422,10 +422,25 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 
 <li>
 Iftach Haitner and Nikolaos Makriyannis and Samuel Ranellucci  and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
-<strong>On the Complexity of Two-Party Differential Privacy</strong> <img src="new.png" class=update1><br>
+<strong>Highly Efficient OT-Based Multiplication Protocols</strong> <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 Manuscript 2021<br>
 Draft of full version  <a  href="https://arxiv.org/abs/2108.07664">[arxiv]</a><br><br>
+
+<div class="box">
+<p>
+We present a new OT-based two-party multiplication protocol that is almost as efficient as <span class=blu1>Gilboa's</span> semi-honest protocol [Crypto '99], but has a high-level of security against malicious adversaries without further compilation. The achieved security suffices for many applications, and, assuming DDH, can be cheaply compiled into full security.
+</p>
+</div>
+</li>
+
+<li>
+Iftach Haitner and Noam Mazor and Jad Silbak and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
+<strong>On the Complexity of Two-Party Differential Privacy</strong> <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+Manuscript 2021<br>
+Draft of full version  <a  href="https://eprint.iacr.org/2021/1373">[ePrint]</a><br><br>
+
 
 <div class="box">
 <p>
@@ -434,20 +449,7 @@ In distributed differential privacy, the parties perform analysis over their joi
 We prove that the use of public-key cryptography is necessary for bypassing the limitation of <span class=blu1>McGregor et al.</span>, showing that a non-trivial solution for the inner-product, or the Hamming distance, implies the existence of a key-agreement protocol. Our bound implies a combinatorial proof for the fact that non-Boolean inner product of independent (strong) Santha-Vazirani sources is a good condenser. We obtain our main result by showing that the inner-product of a (single, strong) SV source with a uniformly random seed is a good condenser, even when the seed and source are dependent.
 </p>
 </div>
-</li>
 
-<li>
-Iftach Haitner and Noam Mazor and Jad Silbak and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
-<strong>Highly Efficient OT-Based Multiplication Protocols</strong> <img src="new.png" class=update1><br>
-<span class=abslide>[abstract]</span> <br>
-Manuscript 2021<br>
-Draft of full version  <a  href="https://eprint.iacr.org/2021/1373">[ePrint]</a><br><br>
-
-<div class="box">
-<p>
-We present a new OT-based two-party multiplication protocol that is almost as efficient as Gilboa's semi-honest protocol (Crypto '99), but has a high-level of security against malicious adversaries without further compilation. The achieved security suffices for many applications, and, assuming DDH, can be cheaply compiled into full security.
-</p>
-</div>
 </li>
 
 
@@ -511,11 +513,6 @@ TCC 2020<br>
 Draft of full version  <a  href="https://arxiv.org/abs/2009.13510">[arXiv]</a><br><br>
 
 
-<div class="box">
-<p><span class=blu1></span><span class=blu2></span>
-Soon...
-</p>
-</div>
 </li>
 
 
