--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@ by presenting a matching protocol.
 <strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <br>
 <span class=abslide>[abstract]</span> <br>
 DISC  2019<br>
+Journal of Cryptology 2022 <!--<a  href="https://link.springer.com/article/10.1007/s00145-021-09415-x">[link]</a>--><br>
 Draft of full version  <a  href="https://arxiv.org/abs/1907.11329">[arXiv]</a><br><br>
 
 
@@ -765,7 +766,7 @@ Iftach Haitner  and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> and 
 <strong>Computational Two-Party Correlation</strong><br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2018<br>
-Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2018/071/">[eccc]</a><br><br>
+SIAM Journal of Computing 2020  <a  href="https://epubs.siam.org/doi/pdf/10.1137/19M1236837">[link]</a><br><br>
 
 <div class="box">
 <p>
@@ -874,8 +875,11 @@ The second result is a new sampling algorithm  that uses a differentially privat
 <strong>﻿From Fairness to Full Security in Multiparty Computation</strong> <br>
 <span class=abslide>[abstract]</span><br>
 SCN 2018 <br>
+Journal of Cryptology 2021 <a  href="https://link.springer.com/article/10.1007/s00145-021-09415-x">[link]</a><br>
 Draft of full version  <a  href="https://eprint.iacr.org/2019/1344">[ePrint]</a><br><br>
 </p>
+
+
 
 
 <div class="box">
@@ -1008,7 +1012,7 @@ Our construction makes use of <em>list-recoverable codes</em>, a generalization 
 
 <li>
 <p><a name="HHRSJoint"></a> 
-Iftach Haitner, <a href="http://www.wisdom.weizmann.ac.il/%7Eyaakovh">Jonathan J. Hoch</a>, <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a>
+Iftach Haitner, Jonathan J. Hoch, <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a>
 and <a href="http://www.wisdom.weizmann.ac.il/%7Egils/">Gil Segev</a><br>
 <strong>Finding Collisions in Interactive Protocols — Tight Lower Bounds on the Round Complexity and Communication Complexityof Statistically Hiding Commitments </strong>
 <br>
