--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@ Complexity.<br></p>
 <b>Students</b><br>
 <ul>
 
-<li>   <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia (PhD)</a></li>
-<li> Noam Mazor (PhD)</li>
-<li> Jad Silbak (PhD) </li>
-<li> Dror Chawin (MSc)</li>
+<li>   <a href="https://sites.google.com/view/noammazor">Noam Mazor</a>  (PhD)</li>
+<li>   <a href="https://sites.google.com/view/jadsilbak">Jad Silbak</a> (PhD)</li>
+<li>   <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a>  (PhD)</li>
+<li> Daniel Nukrai (MSc)</li>
 <li> Yonatan Karidi-Heller (MSc)</li>
 
 
@@ -196,10 +196,10 @@ Complexity.<br></p>
 <li>   <a href="http://chrisbrzuska.de/">Christopher Brzuska</a> (Postdoc)</li>
 <li>   <a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a> (longterm student visitor)</li>
 <li> Nissan Levi (MSc student)</li>
-<li>   <a href="http://people.csail.mit.edu/rancohen/">Ran Cohen (Postdoc)</a></li>
+<li>   <a href="http://people.csail.mit.edu/rancohen/">Ran Cohen</a> (Postdoc)</li>
 <li> Matan Orland (MSc student)</li>
-<li>   <a href="http://wicom.upf.edu/node/98">Nikolaos Makriyannis (Postdoc)</a></li>
-
+<li>   <a href="http://wicom.upf.edu/node/98">Nikolaos Makriyannis</a> (Postdoc)</li>
+<li> Dror Chawin (MSc)</li>
 </ul>
 <br>
  </div>
