--- a/index.html
+++ b/index.html
@@ -840,7 +840,9 @@ Iftach Haitner  and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> and 
 <strong>Computational Two-Party Correlation</strong><br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2018<br>
-SIAM Journal of Computing 2020  <a  href="https://epubs.siam.org/doi/pdf/10.1137/19M1236837">[link]</a><br><br>
+SIAM Journal of Computing 2020  <a  href="https://epubs.siam.org/doi/pdf/10.1137/19M1236837">[link]</a><br>
+Draft of full version  <a  href="https://arxiv.org/abs/2105.00765">[arxiv]</a><br><br>
+
 
 <div class="box">
 <p>
@@ -914,6 +916,7 @@ setup, and is in some sense non-black box.
 Augmented Weak Martingales and Differentially Private Sampling</strong><br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2018<br>
+SIAM Journal of Computing 2022 <br>
 Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2017/168/">[eccc]</a><br><br>
 
 
