--- a/index.html
+++ b/index.html
@@ -1312,7 +1312,9 @@ Iftach Haitner<br>
 <span class=abslide>[abstract]</span> <a href="papers/ArgumentPR/Seminar.pptx">[slides]</a> <br>
 SIAM Journal of Computing 2013   <a  href="http://epubs.siam.org/doi/abs/10.1137/100810630">[link]</a><br>
 IEEE Symposium on Foundations of Computer Science (FOCS), 2009<br>
-Draft of full version <a href="papers/ArgumentPR/ArgumentPR.pdf">[pdf]</a>
+Draft of full version <a href="https://eccc.weizmann.ac.il/report/2009/027/">[eccc]</a><br><br>
+(The SICOMP version contains an eror in Prop 2.5, which we fix in the eccc version. The eror is minor 
+and has no effect on the rest of the text.)
 </p>
 
 <div class="box"  >
