--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@ We advance towards a better understating of this notion, showing that a k-incomp
 Iftach Haitner and Daniel Nukrai and <a href="https://www.eylonyogev.com/about">Eylon Yogev</a> <br>
 <strong>Lower Bound on SNARGs in the Random Oracle Model</strong> <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
+Crypto 2022<br>
 Draft of full version  <a  href="https://eprint.iacr.org/2022/178">[ePrint]</a><br><br>
 
 <div class="box">
