--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 Iftach Haitner and Noam Mazor and <a href="https://sites.google.com/view/jadsilbak">Jad Silbak</a><br>
 <strong>Incompressiblity and Next-Block Pseudoentropy</strong> <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
-Manuscript 2022<br>
+ITCS 2023<br>
 Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2022/032/">[eccc]</a><br><br>
 
 
