--- a/index.html
+++ b/index.html
@@ -147,14 +147,18 @@ d.addEventListener ? d.addEventListener("click",_gaLt,!1) : d.attachEvent && d.a
 <div id=wrapall>
   <div id=topwrap style="padding-left : 40px">
 <h1>Iftach Haitner - <span style="font-size : 125%"> יפתח הייטנר</span> </h1>
-
 <div   alt="" class="backup shadow2" id="iftach_pic"></div>
-<p style="font-size : 110%"> I am a faculty member at the <a href="https://en.cs.tau.ac.il/computer">School of Computer Science</a>
-at <a href="http://www.tau.ac.il">Tel Aviv University</a>.
-I am the director of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
+<p style="font-size : 110%"> I am a principal researcher at the 
+<a href="https://stellar.org/">Stellar Development Foundation</a>, on leave from
+the <a href="https://en.cs.tau.ac.il/computer">School of Computer Science</a>
+at <a href="http://www.tau.ac.il">Tel Aviv University</a>. My main research interests are Cryptography and Computational
+Complexity.
+<!---
+A faculty member at . I am the director of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
 Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a>.<br><br>
 My main research interests are Cryptography and Computational
-Complexity.<br></p>
+Complexity.-->
+<br></p>
 
 <span class=boxtop id=info>[Info]</span>
 <span class=boxtop id=bio>[Short Bio]</span>
@@ -185,9 +189,7 @@ Complexity.<br></p>
 <ul>
 <li>   <a href="http://wicom.upf.edu/node/98">Nikolaos Makriyannis</a></li>
 </ul>
-<br>
-
---!>
+<br>-->
 
 <b>Past members</b><br>
 <ul>
@@ -218,16 +220,10 @@ Mail: Iftach Haitner, Tel Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69
 
 <div class="bio top">
 <h2>Short Biography </h2>
-I am a faculty  member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
-at <a href="http://www.tau.ac.il">Tel Aviv University</a>.<br>
-I am the director of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
-Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a>.<br>
-Until July 2010, I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
-Research New England</a>. Prior to the time at Microsoft
-Research, I did a six months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department of
-Computer Science, University of Haifa</font></a>, hosted by
-<a href="http://cs.haifa.ac.il/%7Eronen/"> Ronen
-shaltiel</a>.
+I am a principal researcher at the 
+<a href="https://stellar.org/">Stellar Development Foundation</a>, on leave from
+the <a href="https://en.cs.tau.ac.il/computer">School of Computer Science</a>
+at <a href="http://www.tau.ac.il">Tel Aviv University</a>.
 I received my PhD in 2008 from the <a href="http://www.wisdom.weizmann.ac.il/">Faculty of
 Mathematics and Computer Science, Weizmann Institute of Science</a>,  under the supervision of <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/">Omer
 Reingold</a>. I got my Master's degree also
@@ -235,6 +231,23 @@ from the Weizmann Institute, under the supervision of <a href="http://www.wisdom
 Goldreich</a>, and did my undergraduate studies (Mathematics and
 Computer Science) at <a href="http://www.tau.ac.il/">Tel-Aviv
 university</a>.<br><br>
+
+<!---
+I am a faculty  member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
+at <a href="http://www.tau.ac.il">Tel Aviv University</a>.<br>
+I am the director of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
+Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a>.<br>
+-->
+<b>Work Experience</b><br>
+<ul>
+<li> [2022--2024] Principal cryptographer at <a href="https://www.coinbase.com/">Coinbase</a>. <li>
+<li> [2019--2022] Consultant at Unbound Security. <li>
+<li> [2016--2018] Consultant at <a href="https://team8.vc/">Team8</a>, working mostly with <a href="https://team8.vc/portfolio/curv/">Curv</a>. <li>
+<li> [2008--2010] Postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
+Research New England</a>. <li>
+</ul>
+<br>
+
 
 
 <b>Awards and Fellowships</b><br>
